made changes to repo-sync.service

--- a/services/repo-sync.service
+++ b/services/repo-sync.service
@@ -1,6 +1,7 @@
 [Unit]
 Description=Update Git Repository and Deploy Files
 After=network.target
+Wants=network-online.target
 
 [Service]
 Type=oneshot
