--- a/services/repo-sync.service
+++ b/services/repo-sync.service
@@ -2,12 +2,16 @@
 Description=Update Git Repository and Deploy Files
 After=network.target
 Wants=network-online.target
-
+ 
 [Service]
 Type=oneshot
 ExecStart=/startup.sh
 RemainAfterExit=yes
 TimeoutStartSec=300
-
+Restart=on-failure
+RestartSec=10
+StartLimitInterval=300
+StartLimitBurst=5
+ 
 [Install]
 WantedBy=multi-user.target
